irls-autotests/etc/iptables.rules
# Generated by iptables-save v1.4.18 on Tue Apr  7 14:56:03 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m state --state NEW -m multiport --ports 12000:12100 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -s 10.98.192.120/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -s 10.98.244.26/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -s 10.98.194.32/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -s 10.98.1.122/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -s 10.98.192.90/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -s 10.98.192.157/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4444 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5900 -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Tue Apr  7 14:56:03 2015
